Fix moz scrollbar

--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -50,6 +50,7 @@
   position: relative;
   overflow-y: hidden;
   overflow-x: -moz-scrollbars-none;
+  overflow-x: hidden;
   height: 100%;
   width: 100%;
 
